Using StructuredTaskScope